--- a/.env
+++ b/.env
@@ -1,6 +1,5 @@
-MYSQL_IP=172.17.0.2 
-MYSQL_PORT=8080
+MYSQL_IP=localhost
 MYSQL_USER=root
 MYSQL_PASSWORD=senha
 MYSQL_DATABASE=BANCO_DADOS_IT_TALENT
-PORT=8080
+APP_PORT=8080
