--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
-MYSQL_IP=172.17.0.2
-MYSQL_USER=root
-MYSQL_PASSWORD=senha
-MYSQL_DATABASE=BANCO_DADOS_IT_TALENT
+
 APP_PORT=8080
+MYSQL_IP=desafio_it_talent_junho_01
+MYSQL_PORT=3306
+MYSQL_USER=root
+MYSQL_PASSWORD=root
+MYSQL_DATABASE=desafio_it_talent_junho_01
